# mangadex-reader

./: Cargo.toml  Makefile.toml
backend/: Cargo.toml  Makefile.toml
backend/src/: lib.rs
backend/src/api/: manga.rs
backend/src/db/: mod.rs  models.rs  schema.rs
frontend/: Cargo.toml  Makefile.toml  index.html
frontend/public/: index.css
frontend/src/: lib.rs
migrations/2020-09-10-181238_create_mangas/: down.sql  up.sql
src/: lib.rs  schema.rs
src/api/: manga.rs
