[package]
name = "frontend"
version = "0.1.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mangadex-reader = { path = ".." }
seed = "0.7.0"
wasm-bindgen = "0.2.68"
web-sys = "0.3.45"